--- a/package.json
+++ b/package.json
@@ -1,11 +1,54 @@
 {
-  "dependencies": {
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^5.3.4",
-    "redux": "^4.2.0",
-    "redux-thunk": "^2.4.2"
+  "name": "slack_clone",
+  "version": "1.0.0",
+  "description": "This README would normally document whatever steps are necessary to get the application up and running.",
+  "main": "index.js",
+  "engines": {
+    "node" :"16.x"
   },
-  "devDependencies": {
-    "redux-logger": "^3.0.6"
-  }
+  "directories": {
+    "lib": "lib"
+  },
+  "dependencies": {
+    "history": "^4.10.1",
+    "csstype": "^3.1.1",
+    "deep-diff": "^0.3.8",
+    "hoist-non-react-statics": "^3.3.2",
+    "isarray": "^0.0.1",
+    "js-tokens": "^4.0.0",
+    "loose-envify": "^1.4.0",
+    "object-assign": "^4.1.1",
+    "path-to-regexp": "^1.8.0",
+    "prop-types": "^15.8.1",
+    "react-is": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "react-router-dom": "^5.3.4",
+    "redux-logger": "^3.0.6",
+    "react-router": "^5.3.4",
+    "redux-thunk": "^2.4.2",
+    "react": "^18.2.0",
+    "resolve-pathname": "^3.0.0",
+    "tiny-invariant": "^1.3.1",
+    "regenerator-runtime": "^0.13.11",
+    "tiny-warning": "^1.0.3",
+    "use-sync-external-store": "^1.2.0",
+    "value-equal": "^1.0.1"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build" : "npm install --prefix frontend && npm run build --prefix frontend"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/saleh-alk/slack-clone.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/saleh-alk/slack-clone/issues"
+  },
+  "homepage": "https://github.com/saleh-alk/slack-clone#readme"
 }
