--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,7 @@ test:
 #
 production:
   <<: *default
-  database: slack_clone_production
-  username: slack_clone
-  password: <%= ENV["SLACK_CLONE_DATABASE_PASSWORD"] %>
+  url: <%= ENV['DATABASE_URL'] %>
+  # database: slack_clone_production
+  # username: slack_clone
+  # password: <%= ENV["SLACK_CLONE_DATABASE_PASSWORD"] %>
