--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /public
+/node_modules
 
 .byebug_history
 .DS_Store
