--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/cable",
+  "proxy": "http://localhost:5000",
   "devDependencies": {
     "redux-logger": "^3.0.6"
   }
