--- a/render.yaml
+++ b/render.yaml
@@ -20,3 +20,8 @@ services:
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
+      - key: REDIS_URL # this must match the name of the environment variable used in production.rb
+        fromService:
+          type: redis
+          name: cache
+          property: connectionString
